<resources>
    <string name="app_name">Afridi Gaming</string>
    <string name="have_ac">New User? <b>Sign Up</b></string>
    <string name="contractUs">Any Problem? <b>Contact Us</b> </string>
    <string name="title_activity_user_home">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="on_going">On Going</string>
    <string name="play">Play</string>
    <string name="result">Result</string>
    <string name="me">Me</string>
    <string name="how_to_add_banance">Follow below steps 👇\n
Step 1:\n
Dial *247# or *322#\n
Select Send Money Option.\n
Enter KhelaGhor Personal Account Number.\n
Enter Your amount\n
Enter Reference Number "1".\n
Now Enter your PIN.\n
Almost Done. Now follow step 2.\n

Step 2:\n
Open Khelaghor App.\n
Go to My Wallet and Select your mobile banking service(bkash or rocket).\n
Verify your Payment by entering amount and last 4 digits of mobile account number.\n
Verify your Payment by entering amount and last 4 digits of mobile account number.\n

Once Khelaghor Verify your payment details, Within 2 hours your money will be added</string>
    <string name="bkash_number">+88 01788458740</string>
    <string name="rocket_number">+88 01788458740</string>
    <string name="youtubelink">https://www.youtube.com/channel/UCWhWr5wEoqlN6Cgg0kZ75TA?app=desktop&amp;fbclid=IwAR1Jv390YYLBdxpquDETWNzuDM-7wldcIcRdoXGMA6A4o3H2b53AaIsNgP4</string>
</resources>