<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.itvillage.afridigaming.ui.ongoing.HomeFragment"
        android:label="@string/on_going"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.itvillage.afridigaming.ui.play.DashboardFragment"
        android:label="@string/play"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.itvillage.afridigaming.ui.result.NotificationsFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_me"
        android:name="com.itvillage.afridigaming.ui.me.MeFragment"
        android:label="@string/me"
        tools:layout="@layout/fragment_notifications" />
</navigation>