<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/bkash_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bkash_number"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:background="@drawable/rocket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rocket_number"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:textColor="@color/purple_500"
        android:text="@string/how_to_add_banance"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp" />
</LinearLayout>